# httpreq-squirrel

./: .gitignore  CMakeLists.txt  LICENSE
include/: SqImports.h  sqrat.h
include/sqrat/: sqratClass.h  sqratFunction.h  sqratGlobalMethods.h  sqratImpClass.h  sqratMemberMethods.h  sqratObject.h  sqratOverloadMethods.h  sqratScript.h  sqratTable.h  sqratTypes.h  sqratUtil.h
src/: CMakeLists.txt  CRequest.cpp  CRequest.h  CResponse.cpp  CResponse.h  CallbackHandler.cpp  CallbackHandler.h  Misc.cpp  Misc.h  SQFunctions.cpp  includes.h  main.cpp  main.h
